--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'fabric-loom' version '0.7.1'
+    id 'fabric-loom' version '0.9.1'
     id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -25,15 +25,11 @@ dependencies {
 
 processResources {
     inputs.property "version", project.version
+    filteringCharset "UTF-8"
 
-//    from(sourceSets.main.resources.srcDirs) {
-//        include "fabric.mod.json"
-//        expand "version": project.version
-//    }
-//
-//    from(sourceSets.main.resources.srcDirs) {
-//        exclude "fabric.mod.json"
-//    }
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
+    }
 }
 
 // ensure that the encoding is set to UTF-8, no matter what the system default is
