fixed naming scheme for assembled file names

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,5 @@ yarn_mappings=1.15.2+build.17
 loader_version=0.11.6
 # Mod Properties
 mod_version=1.0.1
-maven_group=fast_reset-1.15.2
-archives_base_name=fast_reset-1.15.2
+maven_group=fast-reset-1.15.2-v
+archives_base_name=fast-reset-1.15.2-v
