--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,5 @@ yarn_mappings=1.16.5+build.10
 loader_version=0.11.3
 # Mod Properties
 mod_version=1.4.1
-maven_group=fast_reset
-archives_base_name=fast-reset
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
+maven_group=fast-reset-1.16.5-v
+archives_base_name=fast-reset-1.16.5-v
