fixed naming scheme for assembled file names fixed naming scheme in fabric.mod.json

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,5 @@ yarn_mappings=1.17.1+build.63
 loader_version=0.11.3
 # Mod Properties
 mod_version=1.0.1
-maven_group=fast_reset
-archives_base_name=fast-reset
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
+maven_group=fast-reset-1.17.1-v
+archives_base_name=fast-reset-1.17.1-v
