--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.16.1
 yarn_mappings=1.16.1+build.21
 loader_version=0.11.3
+mixinextras_version=0.0.12
 # Mod Properties
 mod_version=1.5
 maven_group=fast-reset-1.16.1-v
