fix invalid session message

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.16.1
 yarn_mappings=1.16.1+build.21
-loader_version=0.11.3
+loader_version=0.14.21
 # Mod Properties
 mod_version=1.5
-maven_group=fast-reset-1.16.1-v
-archives_base_name=fast-reset-1.16.1-v
+minecraft_target=1.16-1.16.1
+maven_group=fast_reset.client
+archives_base_name=fast-reset
