--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
 plugins {
-    id 'fabric-loom' version '0.7.1'
-    id 'maven-publish'
+    id 'fabric-loom' version '1.3-SNAPSHOT'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = project.archives_base_name
-version = project.mod_version
+version = "$project.mod_version+$project.minecraft_target"
 group = project.maven_group
 
 dependencies {
@@ -42,32 +41,32 @@ tasks.withType(JavaCompile) {
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 // if it is present.
 // If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = "sources"
-    from sourceSets.main.allSource
-}
+//task sourcesJar(type: Jar, dependsOn: classes) {
+//    classifier = "sources"
+//    from sourceSets.main.allSource
+//}
 
 jar {
     from "LICENSE"
 }
 
-// configure the maven publication
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
-        }
-    }
-
-    // select the repositories you want to publish to
-    repositories {
-        // uncomment to publish to the local maven
-        // mavenLocal()
-    }
-}
+//// configure the maven publication
+//publishing {
+//    publications {
+//        mavenJava(MavenPublication) {
+//            // add all the jars that should be included when publishing to maven
+//            artifact(remapJar) {
+//                builtBy remapJar
+//            }
+//            artifact(sourcesJar) {
+//                builtBy remapSourcesJar
+//            }
+//        }
+//    }
+//
+//    // select the repositories you want to publish to
+//    repositories {
+//        // uncomment to publish to the local maven
+//        // mavenLocal()
+//    }
+//}
