--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
+target_version=1.16.1
 minecraft_version=1.16.1
 yarn_mappings=1.16.1+build.21
 loader_version=0.14.21
 # Mod Properties
 mod_version=1.5
-minecraft_target=1.16-1.16.1
 maven_group=fast_reset.client
 archives_base_name=fast-reset
