--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id "fabric-loom" version "1.3-SNAPSHOT"
+    id "org.ajoberstar.grgit" version "5.2.0"
 }
 
-version = "$mod_version+$target_version"
+version = "${getVersionMetadata()}+$target_version"
 group = maven_group
 
 base {
@@ -38,4 +39,24 @@ jar {
     from("LICENSE") {
         rename { "${it}_${base.archivesName.get()}" }
     }
+}
+
+/*
+ * Gets the version name from the latest Git tag
+ */
+
+@SuppressWarnings('GrMethodMayBeStatic')
+def getVersionMetadata() {
+    // CI builds version numbers
+    def build_id = System.getenv("RELEASE_TAG")
+    if (build_id != null) return build_id
+
+    // Development builds
+    if (grgit == null) return "dev"
+
+    // Named development builds
+    def id = grgit.head().getAbbreviatedId()
+    if (!grgit.status().clean) id += "-dirty"
+
+    return "rev.$id"
 }
